--- a/Accord/Base.lproj/Main.storyboard
+++ b/Accord/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
         <!--User-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="User" title="User" id="BYZ-38-t0r" customClass="UserViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MAIN_USER" title="User" id="BYZ-38-t0r" customClass="UserViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -78,7 +78,7 @@
                                                         <constraint firstAttribute="height" constant="44" id="O0h-Jt-fdv"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -107,10 +107,44 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Members" id="eR6-Uc-UB0">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="GNJ-03-Dud">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="mgL-7h-rHT" detailTextLabel="Ro6-nc-fWL" style="IBUITableViewCellStyleValue1" id="GNJ-03-Dud">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GNJ-03-Dud" id="TCE-yp-O3f">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Admin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mgL-7h-rHT">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="None" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ro6-nc-fWL">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="PRJ-Sh-Ke3" detailTextLabel="YON-B4-mCC" style="IBUITableViewCellStyleValue1" id="Gqw-q8-2to">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gqw-q8-2to" id="ilh-WN-h25">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Users" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PRJ-Sh-Ke3">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="None" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YON-B4-mCC">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -148,7 +182,7 @@
                                                         <constraint firstAttribute="height" constant="44" id="3cJ-4C-tjw"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -170,7 +204,7 @@
                                                         <constraint firstAttribute="height" constant="44" id="9zp-hE-5v7"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -181,7 +215,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7D1-J1-6Lr" detailTextLabel="2f0-qq-SIl" style="IBUITableViewCellStyleValue1" id="Dtc-ZM-QmY">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7D1-J1-6Lr" detailTextLabel="wl2-tB-urX" style="IBUITableViewCellStyleValue1" id="Dtc-ZM-QmY">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dtc-ZM-QmY" id="tTT-zH-McZ">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -192,7 +226,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2f0-qq-SIl">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="None" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wl2-tB-urX">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -227,7 +261,7 @@
         <!--List-->
         <scene sceneID="WHf-np-qQB">
             <objects>
-                <viewController storyboardIdentifier="List" title="List" automaticallyAdjustsScrollViewInsets="NO" id="ud9-TK-Dnc" customClass="ListViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MAIN_LIST" title="List" automaticallyAdjustsScrollViewInsets="NO" id="ud9-TK-Dnc" customClass="ListViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c7N-m0-Th7"/>
                         <viewControllerLayoutGuide type="bottom" id="1sm-e7-1cv"/>
@@ -267,7 +301,7 @@
         <!--ToDo-->
         <scene sceneID="FQj-JX-gYQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Uy2-ce-jAk" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="HOME_LIST" automaticallyAdjustsScrollViewInsets="NO" id="Uy2-ce-jAk" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="ToDo" id="EsQ-fk-gib"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zpb-Rb-xLN">
@@ -286,7 +320,7 @@
         <!--User-->
         <scene sceneID="Ms6-YN-TR7">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uEM-Tn-O2h" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="HOME_USER" automaticallyAdjustsScrollViewInsets="NO" id="uEM-Tn-O2h" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="User" id="fjq-Gx-ZTX"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1fK-Ny-hn9">
